@@ -1164,10 +1164,8 @@ end
       [other, self.to_s]
     when Symbol
       [other, self.to_sym]
-    when Integer
-      [other, self.to_i]
-    when Float
-      [other, self.to_f]
+    when Numeric
+      [other, self.numeric]
     when Array
       [other, self.to_a]
     else
